force-app/main/default/staticresources/python/Disappear/src/objects/PubScientificStatement__c.object
<CustomObject>
    <fields>
        <fullName>IsKey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PublicationTitle_Formula__c</fullName>
        <formula>Publication__r.Publication_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Publication Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Publication Scientific Statements</relationshipLabel>
        <relationshipName>Publication_Scientific_Statements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scientific_Statement_Details__c</fullName>
        <formula>Scientific_Statement__r.ScientificStatement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scientific Statement Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scientific_Statement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scientific Statement</label>
        <referenceTo>ProdIndObjSciStatement__c</referenceTo>
        <relationshipLabel>Publication Scientific Statements</relationshipLabel>
        <relationshipName>Publication_Scientific_Statements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Publication Scientific Statement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IsKey__c</columns>
        <columns>Publication__c</columns>
        <columns>Scientific_Statement__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Publication Scientific Statement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publication Scientific Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>